--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^5.15.15",
     "@mui/x-data-grid": "^6.19.10",
     "axios": "^1.6.7",
+    "highcharts": "^11.4.1",
+    "highcharts-react-official": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-plaid-link": "^3.5.1"
@@ -29,6 +31,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
-    "vite": "^5.1.6"
+    "vite": "^5.2.11"
   }
 }
