--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "mssql": "^10.0.2",
     "nodemon": "^3.1.0",
     "plaid": "^21.0.0"
   }
