--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "highcharts-react-official": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-plaid-link": "^3.5.1"
+    "react-plaid-link": "^3.5.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
