--- a/server/package.json
+++ b/server/package.json
@@ -10,14 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "morgan": "^1.10.0",
     "mssql": "^11.0.0",
     "nodemon": "^3.1.0",
-    "plaid": "^21.0.0"
+    "plaid": "^21.0.0",
+    "socket.io": "^4.7.5"
   }
 }
