--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,11 @@
     "@mui/x-data-grid": "^6.19.11",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@tanstack/react-table": "^8.19.2",
-    "@radix-ui/react-label": "^2.1.0",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -36,9 +36,10 @@
     "react-image": "^4.1.0",
     "react-plaid-link": "^3.5.1",
     "react-router-dom": "^6.24.0",
+    "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "recharts": "^2.12.7"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
