--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "highcharts": "^11.4.1",
     "highcharts-react-official": "^3.2.1",
     "lucide-react": "^0.397.0",
@@ -42,6 +43,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.6",
     "@types/node": "^20.14.9",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
