--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           SA_PASSWORD: "Apple123"
           ACCEPT_EULA: "Y"
         options: >-
-          --health-cmd /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P 'Apple123' -Q "SELECT 1"
+          --health-cmd "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P 'Apple123' -Q \"SELECT 1\""
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -41,7 +41,7 @@ jobs:
 
     - name: Input Dummy Data 
       run: |
-        /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P $'Apple123' -i db/tests/dummy_data.sql
+        /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P 'Apple123' -i db/tests/dummy_data.sql
 
     - name: Run Tests
       run: |
