updating with multiple files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,4 +45,11 @@ jobs:
 
     - name: Run Tests
       run: |
-        /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P 'Apple123' -Q "IF (SELECT TOP 1 Amount FROM dbo.transactions WHERE account_id = 1)=100.00 PRINT 'Transaction Amount 100.00 is validated' ELSE THROW 50000, '100.00 expected but received', 1;"
+        /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P 'Apple123' -Q -i db/tests/tests/transactions-tests.sql
+   
+   
+    - name: Run All SQL Scripts
+      run: |
+        for file in db/tests/tests/*.sql; do
+          /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P 'Apple123' -i "$file"
+        done
