--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "lucide-react": "^0.397.0",
     "next": "^14.2.4",
     "nextjs": "^0.0.3",
+    "plaid": "^26.0.0",
     "plaid-threads": "^14.5.0",
     "radix-ui": "^1.0.1",
     "react": "^18.2.0",
